RESOLVED FIXED298975
[css-anchor-position-1] position-visibility: no-overflow invalidation issue
https://bugs.webkit.org/show_bug.cgi?id=298975
Summary [css-anchor-position-1] position-visibility: no-overflow invalidation issue
Kiet Ho
Reported 2025-09-16 13:49:35 PDT
imported/w3c/web-platform-tests/css/css-anchor-position/position-visibility-add-no-overflow.html
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-16 13:49:44 PDT
Kiet Ho
Comment 2 2025-09-17 01:10:18 PDT
EWS
Comment 3 2025-09-17 18:59:30 PDT
Committed 300132@main (12d6cdfb97ad): <https://commits.webkit.org/300132@main> Reviewed commits have been landed. Closing PR #50845 and removing active labels.
EWS
Comment 4 2025-09-19 16:36:22 PDT
Committed 297297.441@safari-7622-branch (d12961142e70): <https://commits.webkit.org/297297.441@safari-7622-branch> Reviewed commits have been landed. Closing PR #3669 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.