[css-anchor-position-1] Change in used visibility should trigger repaint rdar://160719145 https://bugs.webkit.org/show_bug.cgi?id=298975

Reviewed by Antti Koivisto.

Changes to the visibility of the element should trigger repaint. However,
RenderStyle::changeRequiresRepaint only checks visibility(), which is the
value of the 'visibility' property. Besides setting 'visibility', an element
can also be "force hidden" by calling RenderStyle::setIsForceHidden()
(which sets the isForceHidden bit in RenderStyle::StyleRareInheritedData).
Change it to check usedVisibility() instead, which accounts for 'visibility'
and force hidden.

This was caught by
imported/w3c/web-platform-tests/css/css-anchor-position/position-visibility-add-no-overflow.html,
but only in Safari, not WKTR. WKTR forces a full repaint before taking
screenshot for comparison, hence why this wasn't caught (because this bug
is about a missed repaint). Adds a similar test that calls
testRunner.dontForceRepaint() to disable full repaint before taking screenshot,
which helps reproduce the issue in WKTR.

Test: fast/css/css-anchor-position/position-visibility-add-no-overflow.html

* LayoutTests/fast/css/css-anchor-position/position-visibility-add-no-overflow-expected.html: Added.
* LayoutTests/fast/css/css-anchor-position/position-visibility-add-no-overflow.html: Added.
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::changeRequiresRepaint const):

Canonical link: https://commits.webkit.org/300132@main